# Coursework_5_Django_application

./: README.md  crm_data_fixture.json  groups_fixture.json  pyproject.toml  users_fixture.json
crm/: asgi.py  settings.py  urls.py  wsgi.py
sending_messages/: admin.py  forms.py  models.py  services.py  urls.py  views.py
sending_messages/migrations/: 0001_initial.py  0002_initial.py  0003_message.py  0004_mailing.py  0005_alter_mailing_options_remove_mailing_recipient_and_more.py  0006_alter_mailingattempt_options_and_more.py  0007_alter_mailing_message_alter_mailing_owner_and_more.py  0008_alter_mailingrecipient_owner_alter_message_owner.py  0009_alter_mailingattempt_status.py  0010_alter_mailingattempt_status.py  0011_alter_mailing_status.py  0012_alter_mailing_status.py  0013_alter_mailing_status.py  0014_alter_mailing_options_alter_mailingrecipient_options_and_more.py  0015_mailing_is_active_mailingrecipient_is_active.py
sending_messages/templates/: added_mailing.html  added_message.html  added_recipient.html  adding_mailing.html  adding_mailing_attempt.html  adding_message.html  adding_recipient.html  base.html  editing_mailing.html  editing_message.html  editing_recipient.html  header.html  home.html  mailing.html  mailing_attempts.html  mailing_list.html  mailing_list_statistics.html  mailings.html  mailings_confirm_delete.html  main_menu.html  message.html  messages.html  messages_confirm_delete.html  recipient.html  recipients.html  recipients_confirm_delete.html
users/: forms.py  models.py  services.py  urls.py  views.py
users/templates/: login.html  (+8 more)
(+5 files in other folders)
